--- a/files/audit/styles.css
+++ b/files/audit/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:640px;
+  width:630px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -39,6 +39,50 @@
 }
 #u2 {
   position:absolute;
+  left:-10px;
+  top:0px;
+  width:190px;
+  height:410px;
+}
+#u2_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:190px;
+  height:410px;
+}
+#u3 {
+  position:absolute;
+  left:2px;
+  top:197px;
+  width:186px;
+  word-wrap:break-word;
+}
+#u4 {
+  position:absolute;
+  left:50px;
+  top:9px;
+  width:59px;
+  height:24px;
+  font-size:20px;
+  color:#FFFFFF;
+}
+#u4_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:59px;
+  height:24px;
+}
+#u5 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:59px;
+  white-space:nowrap;
+}
+#u6 {
+  position:absolute;
   left:0px;
   top:0px;
   width:40px;
@@ -48,62 +92,338 @@
   font-style:normal;
   color:#FFFFFF;
 }
-#u2_img {
+#u6_img {
   position:absolute;
   left:0px;
   top:0px;
   width:40px;
   height:30px;
 }
-#u3 {
+#u7 {
   position:absolute;
   left:2px;
   top:8px;
   width:36px;
   word-wrap:break-word;
 }
-#u4 {
+#u8 {
   position:absolute;
-  left:50px;
-  top:70px;
-  width:200px;
-  height:100px;
+  left:52px;
+  top:43px;
+  width:65px;
+  height:65px;
 }
-#u4_img {
+#u8_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:200px;
-  height:100px;
+  width:65px;
+  height:65px;
 }
-#u5 {
+#u9 {
   position:absolute;
   left:2px;
-  top:42px;
-  width:196px;
+  top:24px;
+  width:61px;
   visibility:hidden;
   word-wrap:break-word;
 }
-#u6 {
+#u10 {
   position:absolute;
-  left:50px;
-  top:9px;
-  width:59px;
+  left:10px;
+  top:110px;
+  width:126px;
+  height:15px;
+  font-family:'Product Sans Regular', 'Product Sans';
+  font-weight:400;
+  font-style:normal;
+  color:#FFFFFF;
+}
+#u10_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:126px;
+  height:15px;
+}
+#u11 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:126px;
+  white-space:nowrap;
+}
+#u12 {
+  position:absolute;
+  left:10px;
+  top:125px;
+  width:157px;
+  height:15px;
+  font-family:'Product Sans Regular', 'Product Sans';
+  font-weight:400;
+  font-style:normal;
+  color:#FFFFFF;
+}
+#u12_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:157px;
+  height:15px;
+}
+#u13 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:157px;
+  white-space:nowrap;
+}
+#u14 {
+  position:absolute;
+  left:10px;
+  top:150px;
+  width:157px;
+  height:30px;
+  font-family:'Product Sans Regular', 'Product Sans';
+  font-weight:400;
+  font-style:normal;
+  font-size:14px;
+  color:#FFFFFF;
+}
+#u14_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:157px;
+  height:30px;
+}
+#u15 {
+  position:absolute;
+  left:2px;
+  top:6px;
+  width:153px;
+  word-wrap:break-word;
+}
+#u16 {
+  position:absolute;
+  left:10px;
+  top:180px;
+  width:157px;
+  height:30px;
+  font-family:'Product Sans Regular', 'Product Sans';
+  font-weight:400;
+  font-style:normal;
+  font-size:14px;
+  color:#FFFFFF;
+}
+#u16_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:157px;
+  height:30px;
+}
+#u17 {
+  position:absolute;
+  left:2px;
+  top:6px;
+  width:153px;
+  word-wrap:break-word;
+}
+#u18 {
+  position:absolute;
+  left:10px;
+  top:210px;
+  width:157px;
+  height:30px;
+  font-family:'Product Sans Regular', 'Product Sans';
+  font-weight:400;
+  font-style:normal;
+  font-size:14px;
+  color:#FFFFFF;
+}
+#u18_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:157px;
+  height:30px;
+}
+#u19 {
+  position:absolute;
+  left:2px;
+  top:6px;
+  width:153px;
+  word-wrap:break-word;
+}
+#u20 {
+  position:absolute;
+  left:10px;
+  top:260px;
+  width:157px;
+  height:30px;
+  font-family:'Product Sans Regular', 'Product Sans';
+  font-weight:400;
+  font-style:normal;
+  font-size:14px;
+  color:#FFFFFF;
+}
+#u20_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:157px;
+  height:30px;
+}
+#u21 {
+  position:absolute;
+  left:2px;
+  top:6px;
+  width:153px;
+  word-wrap:break-word;
+}
+#u22 {
+  position:absolute;
+  left:190px;
+  top:16px;
+  width:69px;
   height:24px;
   font-size:20px;
   color:#FFFFFF;
 }
-#u6_img {
+#u22_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:59px;
+  width:69px;
   height:24px;
 }
-#u7 {
+#u23 {
   position:absolute;
   left:0px;
   top:0px;
-  width:59px;
+  width:69px;
+  white-space:nowrap;
+}
+#u24 {
+  position:absolute;
+  left:177px;
+  top:50px;
+  width:463px;
+  height:75px;
+}
+#u24_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:463px;
+  height:75px;
+}
+#u25 {
+  position:absolute;
+  left:2px;
+  top:30px;
+  width:459px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u26 {
+  position:absolute;
+  left:538px;
+  top:107px;
+  width:98px;
+  height:15px;
+  font-family:'Product Sans Regular', 'Product Sans';
+  font-weight:400;
+  font-style:normal;
+  color:#FFFFFF;
+}
+#u26_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:98px;
+  height:15px;
+}
+#u27 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:98px;
+  white-space:nowrap;
+}
+#u28 {
+  position:absolute;
+  left:548px;
+  top:58px;
+  width:86px;
+  height:15px;
+  font-family:'Product Sans Regular', 'Product Sans';
+  font-weight:400;
+  font-style:normal;
+  color:#FFFFFF;
+}
+#u28_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:86px;
+  height:15px;
+}
+#u29 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:86px;
+  white-space:nowrap;
+}
+#u30 {
+  position:absolute;
+  left:190px;
+  top:58px;
+  width:40px;
+  height:15px;
+  font-family:'Product Sans Regular', 'Product Sans';
+  font-weight:400;
+  font-style:normal;
+  color:#FFFFFF;
+}
+#u30_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:40px;
+  height:15px;
+}
+#u31 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:40px;
+  white-space:nowrap;
+}
+#u32 {
+  position:absolute;
+  left:190px;
+  top:73px;
+  width:52px;
+  height:15px;
+  font-family:'Product Sans Regular', 'Product Sans';
+  font-weight:400;
+  font-style:normal;
+  color:#FFFFFF;
+}
+#u32_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:52px;
+  height:15px;
+}
+#u33 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:52px;
   white-space:nowrap;
 }
