--- a/files/dash_board/styles.css
+++ b/files/dash_board/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:640px;
+  width:720px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -16,7 +16,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:640px;
+  width:720px;
   height:410px;
   font-family:'Product Sans Bold', 'Product Sans';
   font-weight:700;
@@ -26,48 +26,45 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:640px;
+  width:720px;
   height:410px;
 }
 #u1 {
   position:absolute;
   left:2px;
   top:197px;
-  width:636px;
+  width:716px;
   visibility:hidden;
   word-wrap:break-word;
 }
 #u2 {
   position:absolute;
-  left:160px;
-  top:66px;
-  width:146px;
-  height:134px;
-  font-family:'Product Sans Regular', 'Product Sans';
-  font-weight:400;
-  font-style:normal;
-  color:#FFFFFF;
+  left:0px;
+  top:0px;
+  width:150px;
+  height:410px;
 }
 #u2_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:146px;
-  height:134px;
+  width:150px;
+  height:410px;
 }
 #u3 {
   position:absolute;
   left:2px;
-  top:117px;
-  width:142px;
+  top:197px;
+  width:146px;
+  visibility:hidden;
   word-wrap:break-word;
 }
 #u4 {
   position:absolute;
-  left:316px;
+  left:0px;
   top:66px;
-  width:146px;
-  height:134px;
+  width:150px;
+  height:33px;
   font-family:'Product Sans Regular', 'Product Sans';
   font-weight:400;
   font-style:normal;
@@ -77,68 +74,70 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:146px;
-  height:134px;
+  width:150px;
+  height:33px;
 }
 #u5 {
   position:absolute;
   left:2px;
-  top:117px;
-  width:142px;
+  top:9px;
+  width:146px;
   word-wrap:break-word;
 }
 #u6 {
   position:absolute;
-  left:160px;
-  top:30px;
-  width:210px;
-  height:26px;
+  left:0px;
+  top:99px;
+  width:150px;
+  height:33px;
   font-family:'Product Sans Regular', 'Product Sans';
   font-weight:400;
   font-style:normal;
-  font-size:20px;
   color:#FFFFFF;
 }
 #u6_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:210px;
-  height:26px;
+  width:150px;
+  height:33px;
 }
 #u7 {
   position:absolute;
-  left:0px;
-  top:0px;
-  width:210px;
+  left:2px;
+  top:9px;
+  width:146px;
   word-wrap:break-word;
 }
 #u8 {
   position:absolute;
   left:0px;
-  top:0px;
+  top:132px;
   width:150px;
-  height:410px;
+  height:33px;
+  font-family:'Product Sans Regular', 'Product Sans';
+  font-weight:400;
+  font-style:normal;
+  color:#FFFFFF;
 }
 #u8_img {
   position:absolute;
   left:0px;
   top:0px;
   width:150px;
-  height:410px;
+  height:33px;
 }
 #u9 {
   position:absolute;
   left:2px;
-  top:197px;
+  top:9px;
   width:146px;
-  visibility:hidden;
   word-wrap:break-word;
 }
 #u10 {
   position:absolute;
   left:0px;
-  top:66px;
+  top:165px;
   width:150px;
   height:33px;
   font-family:'Product Sans Regular', 'Product Sans';
@@ -163,7 +162,7 @@
 #u12 {
   position:absolute;
   left:0px;
-  top:99px;
+  top:198px;
   width:150px;
   height:33px;
   font-family:'Product Sans Regular', 'Product Sans';
@@ -188,7 +187,7 @@
 #u14 {
   position:absolute;
   left:0px;
-  top:165px;
+  top:231px;
   width:150px;
   height:33px;
   font-family:'Product Sans Regular', 'Product Sans';
@@ -212,145 +211,23 @@
 }
 #u16 {
   position:absolute;
-  left:0px;
-  top:198px;
-  width:150px;
-  height:33px;
-  font-family:'Product Sans Regular', 'Product Sans';
-  font-weight:400;
-  font-style:normal;
+  left:219px;
+  top:99px;
+  width:401px;
+  height:48px;
   color:#FFFFFF;
 }
 #u16_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:150px;
-  height:33px;
+  width:401px;
+  height:48px;
 }
 #u17 {
   position:absolute;
-  left:2px;
-  top:9px;
-  width:146px;
-  word-wrap:break-word;
-}
-#u18 {
-  position:absolute;
-  left:0px;
-  top:231px;
-  width:150px;
-  height:33px;
-  font-family:'Product Sans Regular', 'Product Sans';
-  font-weight:400;
-  font-style:normal;
-  color:#FFFFFF;
-}
-#u18_img {
-  position:absolute;
   left:0px;
   top:0px;
-  width:150px;
-  height:33px;
-}
-#u19 {
-  position:absolute;
-  left:2px;
-  top:9px;
-  width:146px;
-  word-wrap:break-word;
-}
-#u20 {
-  position:absolute;
-  left:0px;
-  top:264px;
-  width:150px;
-  height:33px;
-  font-family:'Product Sans Regular', 'Product Sans';
-  font-weight:400;
-  font-style:normal;
-  color:#FFFFFF;
-}
-#u20_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:150px;
-  height:33px;
-}
-#u21 {
-  position:absolute;
-  left:2px;
-  top:9px;
-  width:146px;
-  word-wrap:break-word;
-}
-#u22 {
-  position:absolute;
-  left:0px;
-  top:132px;
-  width:150px;
-  height:33px;
-  font-family:'Product Sans Regular', 'Product Sans';
-  font-weight:400;
-  font-style:normal;
-  color:#FFFFFF;
-}
-#u22_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:150px;
-  height:33px;
-}
-#u23 {
-  position:absolute;
-  left:2px;
-  top:9px;
-  width:146px;
-  word-wrap:break-word;
-}
-#u24 {
-  position:absolute;
-  left:183px;
-  top:66px;
-  width:100px;
-  height:100px;
-}
-#u24_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:100px;
-  height:100px;
-}
-#u25 {
-  position:absolute;
-  left:2px;
-  top:42px;
-  width:96px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u26 {
-  position:absolute;
-  left:339px;
-  top:66px;
-  width:100px;
-  height:100px;
-}
-#u26_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:100px;
-  height:100px;
-}
-#u27 {
-  position:absolute;
-  left:2px;
-  top:42px;
-  width:96px;
-  visibility:hidden;
-  word-wrap:break-word;
+  width:401px;
+  white-space:nowrap;
 }
